--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <li>go to Egipt</li>
         </ul>
     </div>
-    
+        <div>
+        <h1 id="Barbarist">Barbarist</h1>
+    </div>
 
     <script src="./main.js"></script>
 </body>
