--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>go to Egipt</li>
         </ul>
     </div>
+   <div class="Alina">Alina</div>
     
 
     <script src="./main.js"></script>
